...
@Composable
fun SearchInputField(value: String, onValueChange: (String) -> Unit, onSearchClick: () -> Unit) {
    Row {
        TextField(
            value = value,
            onValueChange = onValueChange,
            placeholder = { Text("Search Crypto") },
            modifier = Modifier
                .fillMaxWidth(0.75f)
                .padding(16.dp),
        )
        Button(
            onClick = onSearchClick,
            modifier = Modifier
                .fillMaxWidth()
                .padding(16.dp)
        ) {
            Icon(Icons.Filled.Search, contentDescription = "Search")
        }
    }
}

@Composable
fun CryptoItem(crypto: CoinData, navController: NavController) {
...
