...
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 16.dp, vertical = 8.dp),
            horizontalArrangement = Arrangement.SpaceBetween
        ) {
            Text("Name", style = MaterialTheme.typography.titleMedium)
            Text("Price (USD)", style = MaterialTheme.typography.titleMedium)
            Text("Change (24H)", style = MaterialTheme.typography.titleMedium)
        }
    }
}

@Composable
...
