...
 *
 * @property route The unique route for a screen. It used as destination path in Composable methods.
 * @property icon The icon to represent the screen in components like Bottom Navigation, Drawer, etc.
 * @property label The label that describes this screen.
 */
sealed class Screen(val route: String, val icon: ImageVector, val label: String) {
    data object Main : Screen("overview", Icons.Filled.Home, "Overview")
    data object Search : Screen("Search", Icons.Filled.Search, "Search")
}


