...

@Composable
fun CryptoDetailCard(coinData: CoinData) {
    val coinDetails = coinData.quote["USD"]
    var selectedTabIndex by remember { mutableIntStateOf(0) }

    val tabTitles = listOf("General Info", "Market Stats", "Supply Details")

    Card(
        modifier = Modifier
            .fillMaxWidth()
            .padding(vertical = 20.dp),
        shape = RoundedCornerShape(20.dp),
...
